@@ -1,6 +1,7 @@
 0.08
  - Add Cieszyn to publishing places cleanup.
  - Add Kroměříž to publishing places cleanup.
+ - Add Kutná Hora to publishing places cleanup.
  - Update copyright years.
 
 0.07 2023-11-29T01:53:01+01:00
